updating rmd / html files

--- a/TechnicalSupplement.Rmd
+++ b/TechnicalSupplement.Rmd
@@ -120,7 +120,7 @@ This R Markdown script contains all the code used for outlier detection, data an
 
 # Experiment 1
 ## Stimuli
-Exp1 (identification task) tests NMS' implicit knowledge of Māori words with varying frequencies. The stimulus materials for the identification task consist of 1,000 Māori words and 1,000 Māori-like nonwords. To obtain a list of words, all words in two Māori running speech data (*32*, *33*) are divided into five frequency bins and 200 words are randomly selected from each of those bins. A list of 10,000 pseudowords (1,000 pseudowords for each phoneme length of nonwords ranging from length 3 to length 12) were generated from a trigram language model by a pseudoword generator (*34*) using a Māori dictionary (*35*) and two running speech corpora (*32, 33*) as training sets. For each word, a nonword is chosen by matching its length and phonotactic score. The phonotactic scores of stimuli are computed using type frequency obtained from a Māori dictionary (*35*). A trigram model is selected in order to take positional information within words into account, including an additional symbol to indicate word boundaries while building a language model. The phonotactic score of each stimulus is obtained by summing log-transformed transitional probabilities which better reflect frequency distributions than raw probabilities (*36*) and then is normalized by length. The Witten-Bell smoothing in SRILM (SRI Language Modeling Toolkit) (*37*) is used to deal with unknown trigrams in nonwords since nonwords are created by training data composed of two RS corpora (*32*, *33*) and a Māori dictionary (*35*), some nonwords contain trigrams which are not observed in a trigram language model built from a dictionary. Every participant had a different list of 300 stimuli containing 30 pairs (words and nonwords) randomly selected from each of five bins (30\*2\*5 = 300 in total). The list of stimuli used in Exp1 can be found in "StimuliExp1.txt".
+Exp1 (identification task) tests NMS' implicit knowledge of Māori words with varying frequencies. The stimulus materials for the identification task consist of 1,000 Māori words and 1,000 Māori-like nonwords. To obtain a list of words, all words in two Māori running speech data (*29*, *30*) are divided into five frequency bins and 200 words are randomly selected from each of those bins. A list of 10,000 pseudowords (1,000 pseudowords for each phoneme length of nonwords ranging from length 3 to length 12) were generated from a trigram language model by a pseudoword generator (*31*) using a Māori dictionary (*32*) and two running speech corpora (*29, 30*) as training sets. For each word, a nonword is chosen by matching its length and phonotactic score. The phonotactic scores of stimuli are computed using type frequency obtained from a Māori dictionary (*32*). A trigram model is selected in order to take positional information within words into account, including an additional symbol to indicate word boundaries while building a language model. The phonotactic score of each stimulus is obtained by summing log-transformed transitional probabilities which better reflect frequency distributions than raw probabilities (*33*) and then is normalized by length. The Witten-Bell smoothing in SRILM (SRI Language Modeling Toolkit) (*34*) is used to deal with unknown trigrams in nonwords since nonwords are created by training data composed of two RS corpora (*29*, *30*) and a Māori dictionary (*32*), some nonwords contain trigrams which are not observed in a trigram language model built from a dictionary. Every participant had a different list of 300 stimuli containing 30 pairs (words and nonwords) randomly selected from each of five bins (30\*2\*5 = 300 in total). The list of stimuli used in Exp1 can be found in "StimuliExp1.txt".
 
 ## Participants
 In Exp1, nonfluent Māori speakers based in New Zealand (NMS), 18 years or older, were recruited online by Facebook Ads. Several exclusion criteria were applied to filter out unusable participants in this experiment. All participants speak New Zealand English as their first language. However, nine participants learned English outside New Zealand and among them, we discard one participant who currently lives in New Zealand for less than ten years. Furthermore, based on their answers to the post-questionnaire, two participants whose level of self-reported proficiency of Māori corresponds to at least “fairly well”, two participants with some knowledge of any other Polynesian languages, and five participants who reported a history of any speech or language impairments are removed. Due to a technical error during the experiment, the data of one participant who rated too small number of stimuli is discarded. After removing those outliers, we also look at the pattern of variability in participants' responses and discard one participant whose standard deviation of ratings falls below two times the standard deviation below the mean among participants.
@@ -311,7 +311,7 @@ multiplot(RfigS2a, RfigS2b, cols=2)
 ```
 
 ## Code for plotting Fig. 1 
-```{r Fig. 1, echo=FALSE, message=FALSE, warning=FALSE, evaluate=FALSE, fig.width=14, fig.height=5, fig.cap="Fig. 1: Mean well-formedness ratings for real words and nonwords by frequency bin. Bin1 contains the most frequent words and Bin5 consists of the least frequent words. Horizontal lines show mean ratings for real words vs. nonwords per bin."}
+```{r Fig. 1, echo=FALSE, message=FALSE, warning=FALSE, evaluate=FALSE, fig.width=10, fig.height=5, fig.cap="Fig. 1: Mean well-formedness ratings for real words and nonwords by frequency bin. Bin1 contains the most frequent words and Bin5 consists of the least frequent words. Horizontal lines show mean ratings for real words vs. nonwords per bin."}
 
 #Get mean ratings for each stimulus per bin
 allBins <- list()
@@ -504,7 +504,7 @@ Within each frequency bin containing the rematched pairs, the distinction betwee
 
 # Experiment 2
 ## Stimuli
-The stimulus materials for Exp2 (well-formedness task), comprise of a list of 240 or 320 Māori-like nonwords generated from a trigram model using a pseudoword generator (*34*). About 6,000 pseudowords (1,000 pseudowords for each phoneme length of pseudowords ranging from length 3 to length 8) were generated by using a Māori dictionary (*35*) and two running speech (RS) corpora (*32*,*33*). Nonwords are chosen by decorrelating their phonotactic scores. The phonotactic scores of nonwords are computed using a trigram language model obtained from a Māori dictionary (*35*) and token frequency from segmented two RS data (*32*, *33*), and from unsegmented RS data. The phonotactic score of each stimulus is obtained by summing log-transformed transitional probabilities which better reflect frequency distributions than raw probabilities (*36*) and then is normalized by length. After decorrelating the three types of phonotactic scores, 240 stimuli are chosen for a list of shorter phoneme length (3 and 4) and 320 stimuli for a list of longer phoneme length (5, 6, 7 and 8). In total, there are six lists with either 240 or 320 nonwords of the same phoneme length which are presented in a different random order. The experiment is designed this way in order not to include any additional influence from the length of stimuli. The list of stimuli used in Exp2 can be found in "StimuliExp2.txt".
+The stimulus materials for Exp2 (well-formedness task), comprise of a list of 240 or 320 Māori-like nonwords generated from a trigram model using a pseudoword generator (*31*). About 6,000 pseudowords (1,000 pseudowords for each phoneme length of pseudowords ranging from length 3 to length 8) were generated by using a Māori dictionary (*32*) and two running speech (RS) corpora (*29*,*30*). Nonwords are chosen by decorrelating their phonotactic scores. The phonotactic scores of nonwords are computed using a trigram language model obtained from a Māori dictionary (*32*) and token frequency from segmented two RS data (*29*, *30*), and from unsegmented RS data. The phonotactic score of each stimulus is obtained by summing log-transformed transitional probabilities which better reflect frequency distributions than raw probabilities (*33*) and then is normalized by length. After decorrelating the three types of phonotactic scores, 240 stimuli are chosen for a list of shorter phoneme length (3 and 4) and 320 stimuli for a list of longer phoneme length (5, 6, 7 and 8). In total, there are six lists with either 240 or 320 nonwords of the same phoneme length which are presented in a different random order. The experiment is designed this way in order not to include any additional influence from the length of stimuli. The list of stimuli used in Exp2 can be found in "StimuliExp2.txt".
 
 ## Participants
 In Exp2, there are three groups of participants: Fluent Māori speakers (MS), non-Māori-speaking speakers of New Zealand English (NMS), and non-Māori-speaking speakers of American English (US). MS and NMS were recruited online by Facebook Ads and US were recruited online by Amazon Mechanical Turk. Participants are adults (18 years or older) who did not previously study linguistics. Most of NMS speak New Zealand English as their first language but 12 participants who did not learn their English in New Zealand but have been living there for at least 10 years are regarded as NMS. On the other hand, 10 participants who learned English outside New Zealand but currently live in New Zealand for less than ten years are discarded. All US speak American English as their first language and one participant who learned English outside the United States is discarded.
@@ -1271,7 +1271,7 @@ kable(TableS8, align="c", caption="Table S9: Comparing AIC scores with MS partic
 ```
 
 ### Code for plotting Fig. 3
-```{r Fig. 3, echo=FALSE, message=FALSE, warning=FALSE, fig.width=11, fig.height=7.5, fig.cap="Fig. 3: Monte Carlo simulations with 1,000 random samples over 18 dictionary sizes. The bars represent bootstrap 95% confidence intervals."}
+```{r Fig. 3, echo=FALSE, message=FALSE, warning=FALSE, fig.width=9.5, fig.height=8, fig.cap="Fig. 3: Monte Carlo simulations with 1,000 random samples over 18 dictionary sizes. The bars represent 95% bootstrap confidence intervals."}
 fig3NMS <- read.delim("./dataFig3NMS.txt", sep ="\t", header = TRUE)
 fig3NMS$size <- ordered(fig3NMS$size, levels = c("1k","2k","3k","4k","5k","6k","7k","8k","9k","10k","11k","12k","13k","14k","15k","16k","17k","18k"))
 fullDictNMS <- readRDS("./fullDictNMS.rds");fullDictAICNMS <- AIC(fullDictNMS)
@@ -1941,7 +1941,7 @@ kable(TableS12, align="c", caption="Table S13: Comparing AIC scores with MS part
 ```
 
 ### Code for plotting Fig. 4
-```{r Fig. 4, echo=FALSE, message=FALSE, warning=FALSE, eval=TRUE, fig.width=13, fig.height=7.5, fig.cap="Figure 4: Density plot of AIC scores for morph random samples"}
+```{r Fig. 4, echo=FALSE, message=FALSE, warning=FALSE, eval=TRUE, fig.width=12, fig.height=7, fig.cap="Fig. 4: Monte Carlo simulations with 1,000 samples over 18 morph sizes. The bars represent 95% bootstrap confidence intervals."}
 figS8NMS <- read.delim("./dataFigS8NMS.txt", sep ="\t", header = TRUE)
 figS8NMS$size <- ordered(figS8NMS$size, levels = c("0.5k","1k","1.5k","2k","2.5k","3k","3.5k"))
 fullMorphsNMS <- readRDS("./morphNMS.rds");fullMorphsAICNMS <- AIC(fullMorphsNMS)
