--- a/DetailedAnalysisAndResults.Rmd
+++ b/DetailedAnalysisAndResults.Rmd
@@ -3,9 +3,6 @@ title: "Non-Māori-speaking New Zealanders have a Māori proto-lexicon"
 author: "Yoon Mi Oh, Simon Todd, Clay Beckner, Jen Hay, Jeanette King, and Jeremy Needle"
 date: '`r trimws(format(Sys.Date()))`'
 output:
-  pdf_document:
-    toc: yes
-    toc_depth: '3'
   html_document:
     code_folding: hide
     fig_caption: yes
@@ -17,6 +14,9 @@ output:
     number_sections: yes
     self_contained: yes
     mode: selfcontained
+  pdf_document:
+    toc: yes
+    toc_depth: '3'
 subtitle: Detailed Analysis and Results Supplement
 editor_options:
   chunk_output_type: console
@@ -1906,7 +1906,7 @@ The results of the fixed-vocabulary analysis are presented in Table S12. For NMS
 
 What does it mean to have a proto-lexicon of this size? To get some insight, we consider the average number of morphs an NMS participant would have to learn. 
 
-Averaged across all of our participants, the best NMS proto-lexicon contained approximately 1,600 morphs. We have no way of knowing the average age of our participants, since we did not collect precise age measurements, but, given the distribution in Figure S7, we can be quite sure that it is at least 20 years old. Thus, our results imply that the average NMS learns 80 or fewer morphs per year.
+Averaged across all of our participants, the best NMS proto-lexicon contained approximately 1,600 morphs. We have no way of knowing the average age of our participants, since we did not collect precise age measurements, but, given the distribution in Figure S7, we can be quite sure that it is at least 20 years old. Thus, if we make the simplifying assumption that the proto-lexicon grows at a constant rate, our results imply that the average NMS learns 80 or fewer morphs per year.
 
 ```{r MC_morphs, eval=FALSE}
 # Stage 3 Monte Carlo analysis for Exp2 -- morphs
